Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
 
     <!-- MOCKUP -->
     <div class="mockup">
-      <img src="assets/mockup.PNG" alt="App MatchWork mostrando like/dislike">
+      <img src="assets/mockup.PNG" alt="App MatchWork mostrando like/dislike" width="400" height="820">
     </div>
   </div>
 </header>
@@ -229,7 +229,7 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
       </div>
     </div>
     <p class="sub" style="margin-top:8px">
-      Engajamento no Bem+Match sinaliza <b>prontidão e comprometimento</b> — reduz tempo de contratação e melhora adaptação.
+      Engajamento no Bem+Match sinaliza <b>prontidão e compromisso</b> — reduz no-show e acelera ramp-up.
     </p>
   </div>
 </section>
@@ -238,7 +238,7 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
 <section id="gamificacao" class="section">
   <div class="container">
     <h2>Gamificação (MatchPoints)</h2>
-    <p class="sub">Pontos simples para incentivar evolução contínua dos candidatos e sinalizar engajamento para as empresas.</p>
+    <p class="sub">Pontos simples para incentivar evolução contínua e sinalizar engajamento para as empresas.</p>
     <div class="grid-2">
       <div class="card">
         <h3>Como ganhar</h3>
@@ -268,44 +268,51 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
     <h2>Planos focados em preencher vagas e evoluir carreiras</h2>
     <p class="sub">Escolha o formato ideal. Sem burocracia, sem multa escondida.</p>
 
-    <!-- COMPARATIVO RÁPIDO -->
-    <div class="card" style="margin-top:14px;border:1px solid var(--line);border-radius:14px;padding:14px;background:#fff">
-      <div style="display:grid;grid-template-columns:repeat(3,1fr);gap:10px;align-items:start">
-        <div>
-          <div style="font-weight:800;color:#6f3aff;margin-bottom:6px">Gratuito (Degustação)</div>
-          <div style="font-size:14px;color:#464b63;line-height:1.4">
-            • 1 vaga por <b>7 dias</b><br>
-            • Ver até <b>5</b> candidatos compatíveis<br>
-            • <span style="opacity:.8">Sem Banco de Talentos / Relatórios</span><br>
-            ➜ Ideal: <b>testar o fluxo</b>
-          </div>
-        </div>
-        <div>
-          <div style="font-weight:800;color:#6f3aff;margin-bottom:6px">One-Shot (vaga única)</div>
-          <div style="font-size:14px;color:#464b63;line-height:1.4">
-            • Vaga ativa <b>até preencher</b> (máx. 3 meses)<br>
-            • Indicações ilimitadas de compatíveis<br>
-            • <span style="opacity:.8">Sem limite de visualizações</span><br>
-            ➜ Ideal: <b>preencher 1 vaga rápido</b>
-          </div>
-        </div>
-        <div>
-          <div style="font-weight:800;color:#6f3aff;margin-bottom:6px">Assinatura (empresas)</div>
-          <div style="font-size:14px;color:#464b63;line-height:1.4">
-            • <b>Vagas ilimitadas</b> o ano todo<br>
-            • <b>Banco de Talentos</b> e relatórios básicos<br>
-            • Suporte por e-mail/WhatsApp<br>
-            ➜ Ideal: <b>fluxo contínuo de vagas</b>
-          </div>
-        </div>
-      </div>
+    <!-- COMPARATIVO — GRATUITO x ONE-SHOT x ASSINATURA -->
+    <div class="card" style="margin-top:16px;padding:0;overflow:auto">
+      <table style="width:100%;border-collapse:collapse;font-size:14px">
+        <thead>
+          <tr style="background:#f6f4ff">
+            <th style="text-align:left;padding:12px 14px"> </th>
+            <th style="text-align:left;padding:12px 14px;color:#6f3aff">Gratuito (Degustação)</th>
+            <th style="text-align:left;padding:12px 14px;color:#6f3aff">One-Shot (vaga única)</th>
+            <th style="text-align:left;padding:12px 14px;color:#6f3aff">Assinatura (empresas)</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td style="padding:10px 14px">Duração</td>
+            <td style="padding:10px 14px">1 vaga por <b>7 dias</b></td>
+            <td style="padding:10px 14px">Até preencher (máx. 3 meses)</td>
+            <td style="padding:10px 14px">Contínuo</td>
+          </tr>
+          <tr>
+            <td style="padding:10px 14px">Acesso a candidatos</td>
+            <td style="padding:10px 14px">Ver até <b>5</b> compatíveis (contato parcial)</td>
+            <td style="padding:10px 14px">Indicações ilimitadas (contato completo)</td>
+            <td style="padding:10px 14px">Banco + matches contínuos</td>
+          </tr>
+          <tr>
+            <td style="padding:10px 14px">Relatórios</td>
+            <td style="padding:10px 14px">—</td>
+            <td style="padding:10px 14px">Resumo da vaga</td>
+            <td style="padding:10px 14px">Funil simples</td>
+          </tr>
+          <tr>
+            <td style="padding:10px 14px">Para quem é</td>
+            <td style="padding:10px 14px"><b>Testar</b> sem risco</td>
+            <td style="padding:10px 14px">Preencher <b>1 vaga</b> rápido</td>
+            <td style="padding:10px 14px">Vagas <b>recorrentes</b></td>
+          </tr>
+        </tbody>
+      </table>
     </div>
-    <p class="sub" style="margin-top:8px">
-      <b>Dica:</b> o Gratuito é degustação. Para <b>uma vaga completa</b>, escolha <b>One-Shot</b>. Para <b>várias vagas recorrentes</b>, vá de <b>Assinatura</b>.
+    <p class="sub" style="margin-top:10px">
+      Gratuito valida o fluxo. Para fechar uma vaga completa, use <b>One-Shot</b>. Para várias vagas ao longo do tempo, <b>Assinatura</b>.
     </p>
 
     <div class="pricing">
-      <!-- Empresas -->
+      <!-- Empresas — Assinatura -->
       <div id="planos-empresas" class="price-card">
         <div class="price-title"><h3 style="margin:0">Empresas — Assinatura</h3></div>
         <div class="price"><span class="amount">R$150</span><span class="small">/mês</span></div>
@@ -313,7 +320,7 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
         <div class="li"><b>Publicações ilimitadas</b> — abra e feche quantas vagas precisar</div>
         <div class="li"><b>Matches qualificados</b> — indicações automáticas por compatibilidade</div>
         <div class="li"><b>Banco de Talentos</b> — busque e convide perfis prontos</div>
-        <div class="li"><b>Relatórios básicos</b> — visão rápida do funil e participação</div>
+        <div class="li"><b>Relatórios</b> — funil simples (visualizações, candidatos, entrevistas)</div>
         <div class="li">Suporte por e-mail/WhatsApp</div>
         <div style="display:flex;gap:8px;margin-top:10px;flex-wrap:wrap">
           <a class="btn primary" href="#contato" aria-label="Assinar plano mensal para empresas">Assinar mensal</a>
@@ -336,13 +343,10 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
           <a class="btn primary" href="#contato" aria-label="Assinar plano mensal candidato">Assinar mensal</a>
           <a class="btn ghost" href="#contato" aria-label="Assinar plano anual candidato">Assinar anual</a>
         </div>
-        <div style="margin-top:10px;color:#787ea3;font-size:13px">
-          <b>Ideal para:</b> acelerar convites, crescer na carreira e acompanhar o mercado.
-        </div>
-        <!-- Clareza do gratuito x Premium -->
+        <!-- Clareza do gratuito x Premium (não conflita com One-Shot) -->
         <div style="margin-top:12px;color:#787ea3;font-size:13px">
-          <b>Conta gratuita inclui:</b> cadastro, testes vocacionais, acesso a vagas e Bem+Match básico.<br>
-          <b>Conta Premium:</b> destaque em buscas, relatórios de carreira e trilhas completas.
+          <b>Conta gratuita:</b> cadastro, testes vocacionais, acesso a vagas e Bem+Match básico.<br>
+          <b>Premium:</b> destaque, relatório de carreira e trilhas completas.
         </div>
       </div>
 
