--- a/index.html
+++ b/index.html
@@ -98,6 +98,16 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
 /* PLAN NOTE */
 .plan-note{background:#f5f3ff;border:1px dashed #cabfff;color:#2c2466;padding:12px 14px;border-radius:12px;text-align:center;margin-top:10px;font-size:14px}
 
+/* COMPARISON TABLE */
+.compare-wrap{margin-top:18px}
+.table-scroll{overflow-x:auto;-webkit-overflow-scrolling:touch;border:1px solid var(--line);border-radius:12px;background:#fff}
+.compare{width:100%;border-collapse:collapse;min-width:760px}
+.compare th,.compare td{padding:12px 14px;border-bottom:1px solid var(--line);text-align:left;font-size:14px}
+.compare thead th{background:#f6f4ff;color:#271c66;font-weight:800;position:sticky;top:0}
+.compare tbody tr:hover td{background:#faf9ff}
+.compare .col-plan{font-weight:800;color:#1a1842}
+.badge-pop{display:inline-block;background:#efe9ff;border:1px solid #d9ccff;color:#2b1e6b;padding:3px 8px;border-radius:999px;font-size:11px;font-weight:800;margin-left:6px}
+
 /* FORM */
 .form{max-width:640px;margin:16px auto 0;display:grid;gap:10px}
 .input{padding:12px;border:1px solid var(--line);border-radius:10px;font-size:16px;background:#fff}
@@ -271,7 +281,7 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
     <h2>Planos focados em preencher vagas e evoluir carreiras</h2>
     <p class="sub">Escolha o formato ideal. Sem burocracia, sem multa escondida.</p>
 
-    <!-- Nota para deixar CLARO que o gratuito não invalida One-Shot -->
+    <!-- Nota: gratuito não invalida One-Shot -->
     <div class="plan-note">
       <b>Plano Gratuito para Empresas (degustação):</b> 1 vaga por 7 dias, até 5 perfis com contato parcial e sem banco de talentos.
       <br>Indicado para conhecer o fluxo. Para <b>preencher</b> uma vaga com contato completo e indicações sem limite, use o <b>One-Shot</b>.
@@ -323,7 +333,7 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
     <!-- Candidatos/Profissionais -->
     <div class="pricing" id="planos-candidato" style="margin-top:18px">
       <div class="price-card" style="grid-column:1/-1">
-        <div class="price-title"><h3 style="margin:0">Candidatos & Profissionais — Premium</h3></div>
+        <div class="price-title"><h3 style="margin:0">Candidatos & Profissionais — Premium <span class="badge-pop">Mais escolhido</span></h3></div>
         <div class="price"><span class="amount">R$14,90</span><span class="small">/mês</span></div>
         <p class="subprice">ou <b>R$149/ano</b> (2 meses de bônus)</p>
         <div class="li"><b>Destaque nas buscas</b> — apareça antes para as empresas</div>
@@ -339,6 +349,81 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
         </div>
       </div>
     </div>
+
+    <!-- TABELA COMPARATIVA (NOVA) -->
+    <div class="compare-wrap" id="comparar">
+      <h3 style="text-align:center;margin:18px 0 10px;color:#1a1d33">Compare planos para empresas</h3>
+      <p class="sub" style="margin-top:0">Veja rapidamente o que cada plano libera. No mobile, arraste para o lado ⇢</p>
+      <div class="table-scroll" role="region" aria-label="Tabela comparativa de planos">
+        <table class="compare">
+          <thead>
+            <tr>
+              <th>Recursos</th>
+              <th>Gratuito (7 dias)</th>
+              <th>One-Shot (vaga única)</th>
+              <th>Assinatura</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td class="col-plan">Duração</td>
+              <td>7 dias</td>
+              <td>Até preencher (máx. 3 meses)</td>
+              <td>Mensal / Anual</td>
+            </tr>
+            <tr>
+              <td class="col-plan">Vagas incluídas</td>
+              <td>1 vaga</td>
+              <td>1 vaga</td>
+              <td>Ilimitadas</td>
+            </tr>
+            <tr>
+              <td class="col-plan">Matching e indicações</td>
+              <td>Básico (até 5 perfis)</td>
+              <td>Completo e sem limite</td>
+              <td>Completo e automático</td>
+            </tr>
+            <tr>
+              <td class="col-plan">Contato dos candidatos</td>
+              <td>Parcial</td>
+              <td>Completo</td>
+              <td>Completo</td>
+            </tr>
+            <tr>
+              <td class="col-plan">Banco de Talentos</td>
+              <td>—</td>
+              <td>—</td>
+              <td>Incluso</td>
+            </tr>
+            <tr>
+              <td class="col-plan">Relatórios</td>
+              <td>—</td>
+              <td>Básico da vaga</td>
+              <td>Básico do funil</td>
+            </tr>
+            <tr>
+              <td class="col-plan">Indicado para</td>
+              <td>Testar o fluxo</td>
+              <td>Fechar 1 posição</td>
+              <td>Recrutar continuamente</td>
+            </tr>
+            <tr>
+              <td class="col-plan">Preço</td>
+              <td>R$ 0</td>
+              <td>R$ 400 / vaga</td>
+              <td>R$ 150 / mês <small>ou</small> R$ 1.500 / ano</td>
+            </tr>
+            <tr>
+              <td></td>
+              <td><a class="btn ghost" href="#contato">Ativar gratuito</a></td>
+              <td><a class="btn primary" href="#contato">Publicar One-Shot</a></td>
+              <td><a class="btn primary" href="#contato">Assinar</a></td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+    <!-- /TABELA -->
   </div>
 </section>
 
